--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation "com.moandjiezana.toml:toml4j:0.7.2"
 	include "com.moandjiezana.toml:toml4j:0.7.2"
+	implementation("org.yaml:snakeyaml:2.2")
+	include "org.yaml:snakeyaml:2.2"
 
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
