--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.2
-	loader_version=0.14.19
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.28
+	loader_version=0.15.7
 
 # Mod Properties
-	mod_version = 0.0.1
+	mod_version = 0.0.1-1.19.2+build.5
 	maven_group = com.jackdaw
 	archives_base_name = chat-with-npc
 
 # Dependencies
-	fabric_version=0.80.0+1.19.4
+	fabric_version=0.77.0+1.19.2
